{
  "version": 4,
  "terraform_version": "1.13.3",
  "serial": 8,
  "lineage": "cf6aad88-fc84-39aa-a280-84153f20b6cd",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "alex_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-07fb0a5bf9ae299a4",
            "arn": "arn:aws:ec2:eu-north-1:603630702891:instance/i-0e3026e7c2ccb264a",
            "associate_public_ip_address": true,
            "availability_zone": "eu-north-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e3026e7c2ccb264a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.nano",
            "ipv6_address_count": 0,
            "key_name": "generalkeypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-03c1400daaf36f843"
              }
            ],
            "primary_network_interface_id": "eni-03c1400daaf36f843",
            "private_dns": "ip-10-0-1-23.eu-north-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.23",
            "public_ip": "16.16.209.9",
            "region": "eu-north-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-05549487400d769a3",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0bfbd05ad20023ab3",
            "tags": {
              "Name": "alex_instance"
            },
            "tags_all": {
              "Name": "alex_instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-03b901c769fa5a229"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "603630702891",
            "id": "i-0e3026e7c2ccb264a",
            "region": "eu-north-1"
          },
          "dependencies": [
            "aws_security_group.alex_sg",
            "aws_subnet.alex_subnet",
            "aws_vpc.alex"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "alex_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:603630702891:internet-gateway/igw-069c0d8fd28f71862",
            "id": "igw-069c0d8fd28f71862",
            "owner_id": "603630702891",
            "region": "eu-north-1",
            "tags": {
              "Name": "alex_igw"
            },
            "tags_all": {
              "Name": "alex_igw"
            },
            "vpc_id": "vpc-03f65295f207e4e53"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.alex"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "alex_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:603630702891:route-table/rtb-0d8b360aef509f4d5",
            "id": "rtb-0d8b360aef509f4d5",
            "owner_id": "603630702891",
            "propagating_vgws": [],
            "region": "eu-north-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-069c0d8fd28f71862",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "alex_route_table"
            },
            "tags_all": {
              "Name": "alex_route_table"
            },
            "timeouts": null,
            "vpc_id": "vpc-03f65295f207e4e53"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "603630702891",
            "id": "rtb-0d8b360aef509f4d5",
            "region": "eu-north-1"
          },
          "dependencies": [
            "aws_internet_gateway.alex_igw",
            "aws_vpc.alex"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04fe48bc2ecba1ecf",
            "region": "eu-north-1",
            "route_table_id": "rtb-0d8b360aef509f4d5",
            "subnet_id": "subnet-0bfbd05ad20023ab3"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.alex_igw",
            "aws_route_table.alex_rt",
            "aws_subnet.alex_subnet",
            "aws_vpc.alex"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alex_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:603630702891:security-group/sg-03b901c769fa5a229",
            "description": "Allow SSH and HTTP",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03b901c769fa5a229",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "alex_sg",
            "name_prefix": "",
            "owner_id": "603630702891",
            "region": "eu-north-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "alex_sg"
            },
            "tags_all": {
              "Name": "alex_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-03f65295f207e4e53"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "603630702891",
            "id": "sg-03b901c769fa5a229",
            "region": "eu-north-1"
          },
          "dependencies": [
            "aws_vpc.alex"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "alex_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:603630702891:subnet/subnet-0bfbd05ad20023ab3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1a",
            "availability_zone_id": "eun1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bfbd05ad20023ab3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "603630702891",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-north-1",
            "tags": {
              "Name": "alex_subnet"
            },
            "tags_all": {
              "Name": "alex_subnet"
            },
            "vpc_id": "vpc-03f65295f207e4e53"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "603630702891",
            "id": "subnet-0bfbd05ad20023ab3",
            "region": "eu-north-1"
          },
          "dependencies": [
            "aws_vpc.alex"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "alex",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:603630702891:vpc/vpc-03f65295f207e4e53",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0600b1522e4efa9aa",
            "default_route_table_id": "rtb-05d93c378ade25f50",
            "default_security_group_id": "sg-061ff62f1aff37fc4",
            "dhcp_options_id": "dopt-02fbcea0ee96372ca",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-03f65295f207e4e53",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-05d93c378ade25f50",
            "owner_id": "603630702891",
            "region": "eu-north-1",
            "tags": {
              "Name": "alex"
            },
            "tags_all": {
              "Name": "alex"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "603630702891",
            "id": "vpc-03f65295f207e4e53",
            "region": "eu-north-1"
          }
        }
      ]
    }
  ]
}